# soprano

./: .gitignore  LiveKit_FasterWhisper_Soprano.ipynb  LiveKit_Soprano_FastPipeline.ipynb  LiveKit_Soprano_v10_WhisperAPI.ipynb  LiveKit_Soprano_v11_FullLocal.ipynb  LiveKit_Soprano_v12_FINAL.ipynb  LiveKit_Soprano_v13.ipynb  LiveKit_Soprano_v14.ipynb  LiveKit_Soprano_v4.ipynb  LiveKit_Soprano_v5.ipynb  LiveKit_Soprano_v6.ipynb  LiveKit_Soprano_v7_Whisper.ipynb  LiveKit_Soprano_v8_GoogleSTT.ipynb  LiveKit_Soprano_v9_Deepgram.ipynb  LiveKit_Voice_Agent_v3.ipynb  LiveKit_Whisper_Pipeline_v2.ipynb  Pipecat_Soprano_Agent.ipynb  README.md  REALAGENTSOPRANO.py  REAL_AGENT_COLAB.ipynb  Soprano_Production_Agent.ipynb  TEST_WEBUI_GPU.IPYNB  livekit_soprano_agent.py  pyproject.toml  story_teller.py
soprano/: soprano_cli.py  tts.py  webui.py
soprano/backends/: lmdeploy.py  transformers.py
soprano/utils/: auto_select.py  text.py  text_normalizer.py
soprano/vocos/: spectral_ops.py
