[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soprano-tts"
version = "0.0.2"
authors = [
  { name="ekwek1", email="eugene.kwek.1@gmail.com" },
]
description = "Soprano: Instant, Ultra‑Realistic Text‑to‑Speech"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch>=2.1.0",
  "unidecode",
  "inflect",
  "scipy",
  "transformers"
]
license = {file = "LICENSE"}

[project.optional-dependencies]
lmdeploy = ["lmdeploy"]

[project.urls]
Homepage = "https://github.com/ekwek1/soprano"
Issues = "https://github.com/ekwek1/soprano/issues"
